prueba api vercel

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>acceso denegado</title>
   </head>
   <body>
-    <h1>Acceso denegado</h1>
+    <h1>Probando api</h1>
   </body>
 </html>
